# seismic-foundry

./: .gitignore  .gitmodules  Cargo.toml  README.md  bunfig.toml  dump.rdb  package.json
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  seismic.yml
crates/anvil/: Cargo.toml  README.md
crates/anvil/core/: Cargo.toml
crates/anvil/core/src/: lib.rs  types.rs
crates/anvil/core/src/eth/: mod.rs
crates/anvil/core/src/eth/transaction/: crypto.rs  mod.rs  optimism.rs  seismic.rs
crates/anvil/src/: anvil.rs  cmd.rs  config.rs  evm.rs  hardfork.rs  pubsub.rs
crates/anvil/src/eth/: api.rs  error.rs  fees.rs  miner.rs  mod.rs  seismic.rs  seismic_util.rs  sign.rs  util.rs
crates/anvil/src/eth/backend/: db.rs  env.rs  executor.rs  fork.rs  genesis.rs  info.rs
crates/anvil/src/eth/backend/mem/: fork_db.rs  in_memory_db.rs  inspector.rs  mod.rs  state.rs  storage.rs
crates/anvil/src/eth/otterscan/: api.rs
crates/anvil/src/eth/pool/: transactions.rs
crates/anvil/src/server/: handler.rs
crates/anvil/src/tasks/: mod.rs
crates/anvil/test-data/: state-dump-legacy-stress.json
crates/anvil/tests/it/: anvil_api.rs  api.rs  eip4844.rs  eip7702.rs  fork.rs  gas.rs  logs.rs  main.rs  optimism.rs  otterscan.rs  pubsub.rs  revert.rs  seismic.rs  seismic_precompiles_test_bytecode.txt  seismic_test_bytecode.txt  sign.rs  simulate.rs  state.rs  traces.rs  transaction.rs  txpool.rs  utils.rs
crates/cast/: Cargo.toml
crates/cast/src/: lib.rs  tx.rs
crates/cast/src/cmd/: call.rs  da_estimate.rs  logs.rs  mktx.rs  run.rs  send.rs  storage.rs
crates/cast/tests/cli/: main.rs
crates/cheatcodes/: Cargo.toml
crates/cheatcodes/assets/: cheatcodes.json
crates/cheatcodes/spec/: Cargo.toml
crates/cheatcodes/spec/src/: lib.rs  vm.rs
crates/cheatcodes/src/: evm.rs  fs.rs  inspector.rs  json.rs  lib.rs  script.rs  utils.rs
crates/cheatcodes/src/evm/: mapping.rs
crates/cheatcodes/src/test/: assert.rs  expect.rs
crates/chisel/: Cargo.toml
crates/chisel/src/: dispatcher.rs  executor.rs  session_source.rs  solidity_helper.rs
crates/cli/: Cargo.toml
crates/cli/src/opts/: dependency.rs
crates/cli/src/utils/: abi.rs  cmd.rs  mod.rs
crates/common/: Cargo.toml
crates/common/fmt/: Cargo.toml
crates/common/fmt/src/: console.rs  dynamic.rs  ui.rs
crates/common/src/: abi.rs  compile.rs  constants.rs  lib.rs  seismic.rs  term.rs  transactions.rs
crates/common/src/provider/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  utils.rs
crates/config/src/inline/: natspec.rs
crates/config/src/providers/: remappings.rs
crates/debugger/src/tui/: context.rs
crates/doc/src/preprocessor/: contract_inheritance.rs  infer_hyperlinks.rs
crates/doc/src/writer/: buf_writer.rs
crates/evm/abi/: Cargo.toml
crates/evm/abi/src/: HardhatConsole.json
crates/evm/core/: Cargo.toml
crates/evm/core/src/: either_evm.rs  env.rs  evm.rs  ic.rs  lib.rs  opcodes.rs  opts.rs  utils.rs
crates/evm/core/src/backend/: cow.rs  error.rs  in_memory_db.rs  mod.rs  snapshot.rs
crates/evm/core/src/fork/: database.rs  init.rs
crates/evm/coverage/src/: analysis.rs  anchors.rs
crates/evm/evm/: Cargo.toml
crates/evm/evm/src/: lib.rs
crates/evm/evm/src/executors/: builder.rs  mod.rs  trace.rs
crates/evm/evm/src/executors/fuzz/: mod.rs
crates/evm/evm/src/executors/invariant/: mod.rs
crates/evm/evm/src/inspectors/: stack.rs
crates/evm/fuzz/: Cargo.toml
crates/evm/fuzz/src/strategies/: int.rs  param.rs  state.rs  uint.rs
crates/evm/traces/: Cargo.toml
crates/evm/traces/src/: lib.rs
crates/evm/traces/src/debug/: mod.rs
crates/evm/traces/src/identifier/: etherscan.rs
crates/fmt/src/: formatter.rs
crates/fmt/src/solang_ext/: ast_eq.rs
crates/fmt/tests/: formatter.rs
crates/forge/: Cargo.toml
crates/forge/assets/: CounterTemplate.s.sol  workflowTemplate.yml
crates/forge/src/: multi_runner.rs  opts.rs  runner.rs
crates/forge/src/cmd/: create.rs  fmt.rs  install.rs  selectors.rs  watch.rs
crates/forge/tests/: ui.rs
crates/forge/tests/cli/: config.rs  verify.rs
crates/forge/tests/it/: config.rs  spec.rs  test_helpers.rs
crates/macros/src/: console_fmt.rs  lib.rs
crates/script/: Cargo.toml
crates/script-sequence/: Cargo.toml
crates/script-sequence/src/: reader.rs  sequence.rs
crates/script/src/: broadcast.rs  execute.rs  lib.rs  receipts.rs  runner.rs  sequence.rs  simulate.rs  transaction.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: util.rs
crates/verify/: Cargo.toml
crates/verify/src/: bytecode.rs  utils.rs  verify.rs
crates/verify/src/etherscan/: mod.rs
docs/seismic/: developers.md
sfoundryup/: README.md  install  sfoundryup
test/: Counter.t.sol
testdata/cheats/: Vm.sol
