[workspace]
members = [
    "crates/anvil/",
    "crates/anvil/core/",
    "crates/anvil/rpc/",
    "crates/anvil/server/",
    "crates/cast/",
    "crates/cheatcodes/",
    "crates/cheatcodes/spec/",
    "crates/chisel/",
    "crates/cli/",
    "crates/common/",
    "crates/config/",
    "crates/debugger/",
    "crates/doc/",
    "crates/evm/core/",
    "crates/evm/coverage/",
    "crates/evm/evm/",
    "crates/evm/fuzz/",
    "crates/evm/traces/",
    "crates/fmt/",
    "crates/forge/",
    "crates/script-sequence/",
    "crates/macros/",
    "crates/test-utils/",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.83"
authors = ["Foundry Contributors", "Seismic Systems"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SeismicSystems/seismic-foundry"
repository = "https://github.com/SeismicSystems/seismic-foundry"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
explicit_iter_loop = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"
# until <https://github.com/rust-lang/rust-clippy/issues/13885> is fixed
literal-string-with-formatting-args = "allow"
result_large_err = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
split-debuginfo = "unpacked"
strip = false

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# Speed up tests and dev build.
[profile.dev.package]
# Solc and artifacts.
foundry-compilers-artifacts-solc.opt-level = 3
foundry-compilers-core.opt-level = 3
foundry-compilers.opt-level = 3
serde_json.opt-level = 3
serde.opt-level = 3

foundry-solang-parser.opt-level = 3
lalrpop-util.opt-level = 3

solar-ast.opt-level = 3
solar-data-structures.opt-level = 3
solar-interface.opt-level = 3
solar-parse.opt-level = 3

# EVM.
alloy-dyn-abi.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3
hashbrown.opt-level = 3
foldhash.opt-level = 3
keccak.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm.opt-level = 3
ruint.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3
bitvec.opt-level = 3

# Fuzzing.
proptest.opt-level = 3
foundry-evm-fuzz.opt-level = 3

# Forking.
axum.opt-level = 3

# Keystores.
scrypt.opt-level = 3

# Misc.
rayon.opt-level = 3
regex.opt-level = 3
regex-syntax.opt-level = 3
regex-automata.opt-level = 3

# Override packages which aren't perf-sensitive for faster compilation speed and smaller binary size.
[profile.release.package]
alloy-sol-macro-expander.opt-level = "z"
figment.opt-level = "z"
foundry-compilers-artifacts-solc.opt-level = "z"
foundry-config.opt-level = "z"
html5ever.opt-level = "z"
mdbook.opt-level = "z"
prettyplease.opt-level = "z"
protobuf.opt-level = "z"
pulldown-cmark.opt-level = "z"
syn-solidity.opt-level = "z"
syn.opt-level = "z"
trezor-client.opt-level = "z"

[workspace.dependencies]
anvil = { path = "crates/anvil" }
cast = { path = "crates/cast" }
chisel = { path = "crates/chisel" }
forge = { path = "crates/forge" }

forge-doc = { path = "crates/doc" }
forge-fmt = { path = "crates/fmt" }
forge-verify = { path = "crates/verify" }
forge-script = { path = "crates/script" }
forge-sol-macro-gen = { path = "crates/sol-macro-gen" }
forge-script-sequence = { path = "crates/script-sequence" }
foundry-cheatcodes = { path = "crates/cheatcodes" }
foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-cli = { path = "crates/cli" }
foundry-common = { path = "crates/common" }
foundry-common-fmt = { path = "crates/common/fmt" }
foundry-config = { path = "crates/config" }
foundry-debugger = { path = "crates/debugger" }
foundry-evm = { path = "crates/evm/evm" }
foundry-evm-abi = { path = "crates/evm/abi" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-evm-coverage = { path = "crates/evm/coverage" }
foundry-evm-fuzz = { path = "crates/evm/fuzz" }
foundry-evm-traces = { path = "crates/evm/traces" }
foundry-macros = { path = "crates/macros" }
foundry-test-utils = { path = "crates/test-utils" }
foundry-wallets = { path = "crates/wallets" }
foundry-linking = { path = "crates/linking" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.13.3", default-features = false }
foundry-compilers = { version = "=0.14.1", default-features = false }  # upstream: 0.14.0
foundry-fork-db = "0.12"
solang-parser = { version = "=0.3.7", package = "foundry-solang-parser" }
solar-parse = { version = "=0.1.2", default-features = false }
solar-sema = { version = "=0.1.2", default-features = false }
solar-interface = "=0.1.1"

## revm
# no default features to avoid c-kzg
revm = { version = "20.0.0", default-features = false }
revm-primitives = { version = "16.0.0", default-features = false }  # upstream: 15.1.0
revm-inspectors = { version = "0.17.0-alpha.1", features = ["serde"] }  # upstream: 0.16.0
seismic-revm = { version = "1.0.0" }

## alloy-evm
alloy-evm = "0.1.0-alpha.3"

## ethers
ethers-contract-abigen = { version = "2.0.14", default-features = false }

## alloy
alloy-consensus = { version = "0.12.1", default-features = false }
alloy-contract = { version = "0.12.1", default-features = false }
alloy-eips = { version = "0.12.1", default-features = false }
alloy-genesis = { version = "0.12.1", default-features = false }
alloy-json-rpc = { version = "0.12.1", default-features = false }
alloy-network = { version = "0.12.1", default-features = false }
alloy-provider = { version = "0.12.1", default-features = false }
alloy-pubsub = { version = "0.12.1", default-features = false }
alloy-rpc-client = { version = "0.12.1", default-features = false }
alloy-rpc-types = { version = "0.12.1", default-features = true }
alloy-serde = { version = "0.12.1", default-features = false }
alloy-signer = { version = "0.12.1", default-features = false }
alloy-signer-aws = { version = "0.12.1", default-features = false }
alloy-signer-gcp = { version = "0.12.1", default-features = false }
alloy-signer-ledger = { version = "0.12.1", default-features = false }
alloy-signer-local = { version = "0.12.1", default-features = false }
alloy-signer-trezor = { version = "0.12.1", default-features = false }
alloy-transport = { version = "0.12.1", default-features = false }
alloy-transport-http = { version = "0.12.1", default-features = false }
alloy-transport-ipc = { version = "0.12.1", default-features = false }
alloy-transport-ws = { version = "0.12.1", default-features = false }
alloy-eip7702 = { version = "0.5.0", default-features = false }

## alloy-core
alloy-dyn-abi = { version = "0.8.25", features = ["seismic", "std"] }
alloy-json-abi = { version = "0.8.25", features = ["seismic"] }
alloy-primitives = { version = "0.8.25", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
    "seismic",
] }
alloy-sol-macro-expander = { version = "0.8.25", features = ["seismic"] }
alloy-sol-macro-input = { version = "0.8.25", features = ["seismic"] }
alloy-sol-types = { version = "0.8.25", features = ["seismic"] }

alloy-chains = "0.1"
alloy-rlp = "0.3"
alloy-trie = "0.7.0"

## op-alloy
op-alloy-consensus = "0.11.0"
op-alloy-rpc-types = "0.11.0"

## cli
anstream = "0.6"
anstyle = "1.0"
terminal_size = "0.4"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
async-trait = "0.1"
derive_more = { version = "2.0", features = ["full"] }
thiserror = "2"

# misc
auto_impl = "1"
aws-config = { version = "1", default-features = true }
aws-sdk-kms = { version = "1", default-features = false }
bytes = "1.8"
walkdir = "2"
prettyplease = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
axum = "0.7"
ciborium = "0.2"
color-eyre = "0.6"
comfy-table = "7"
dirs = "6"
dunce = "1"
evm-disassembler = "0.5"
evmole = "0.7"
eyre = "0.6"
figment = "0.10"
futures = "0.3"
hyper = "1.5"
indicatif = "0.17"
itertools = "0.14"
jsonpath_lib = "0.3"
k256 = "0.13"
mesc = "0.3"
num-format = "0.4"
parking_lot = "0.12"
proptest = "1"
rand = "0.8"
rayon = "1"
regex = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }
rustls = "0.23"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
similar-asserts = "1.6"
soldeer-commands = "=0.5.4"
soldeer-core = { version = "=0.5.4", features = ["serde"] }
strum = "0.27"
tempfile = "3.13"
tikv-jemallocator = "0.6"
tokio = "1"
toml = "0.8"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
vergen = { version = "8", default-features = false }
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
path-slash = "0.2"
jiff = "0.2"

# Use unicode-rs which has a smaller binary size than the default ICU4X as the IDNA backend, used
# by the `url` crate.
# See the `idna_adapter` README.md for more details: https://docs.rs/crate/idna_adapter/latest
idna_adapter = "=1.1.0"

seismic-enclave = "0.1.0"

[patch.crates-io]
# If our dependencies depend on these things,
# then this will override whatever versions they point to
# and instead use our local version
foundry-fork-db = { git = "https://github.com/SeismicSystems/seismic-foundry-fork-db.git", rev = "c94302a" }

# seismic-revm
revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "ce96897" }
revm-primitives = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "ce96897" }
revm-interpreter = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "ce96897" }
seismic-revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "ce96897"}

# seismic-evm
alloy-evm = { git = "https://github.com/SeismicSystems/seismic-evm.git", rev = "b277659" }

# seismic-revm-inspectors
revm-inspectors = { git = "https://github.com/SeismicSystems/seismic-revm-inspectors.git", rev = "505ff96" }

# seismic-alloy-core
alloy-dyn-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-json-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-sol-macro = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-sol-macro-expander = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-sol-macro-input = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-sol-types = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }
alloy-sol-type-parser = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }

# seismic-alloy
# alloy-consensus = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-contract = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-eips = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-genesis = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-json-rpc = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-network = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-provider = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-pubsub = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-rpc-client = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-rpc-types = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-rpc-types-trace = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-rpc-types-eth = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-serde = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer-aws = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer-gcp = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer-ledger = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer-local = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-signer-trezor = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-transport = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-transport-http = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-transport-ipc = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-transport-ws = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-node-bindings = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }
# alloy-network-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "22b8d28" }

foundry-compilers = { git = "https://github.com/SeismicSystems/seismic-compilers.git", rev = "5869868" }
foundry-compilers-artifacts = { git = "https://github.com/SeismicSystems/seismic-compilers.git", rev = "5869868" }
foundry-compilers-artifacts-solc = { git = "https://github.com/SeismicSystems/seismic-compilers.git", rev = "5869868" }
foundry-compilers-artifacts-vyper = { git = "https://github.com/SeismicSystems/seismic-compilers.git", rev = "5869868" }
foundry-compilers-core = { git = "https://github.com/SeismicSystems/seismic-compilers.git", rev = "5869868" }

# For foundry-compilers: cargo uses 0.1.3 unless we specify exact commits here
solar-sema = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-parse = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-ast = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-data-structures = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-interface = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-config = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }
solar-macros = { git = "https://github.com/paradigmxyz/solar.git", rev = "336bb6d" }

seismic-enclave = { git = "https://github.com/SeismicSystems/seismic-enclave.git", rev = "7e79591"}
