[package]
name = "anvil-core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-common.workspace = true
foundry-evm.workspace = true
revm = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "c-kzg",
] }

alloy-primitives = { workspace = true, features = ["serde", "seismic", "rlp"] }
alloy-rpc-types = { workspace = true, features = ["anvil", "trace"] }
alloy-serde.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus = { workspace = true, features = ["k256", "kzg"] }
alloy-dyn-abi = { workspace = true, features = ["std", "eip712", "seismic"] }
alloy-trie.workspace = true
op-alloy-consensus = { workspace = true, features = ["serde"] }
alloy-network.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
bytes.workspace = true

# misc
rand.workspace = true
thiserror.workspace = true

anyhow = "1.0"
once_cell = "1"
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

tee_service_api = { git = "ssh://git@github.com/SeismicSystems/TEEService.git", package = "tee_service_api", rev = "9ab28c87247b876f5875c470f39bd3a3b07b3e8b"}

[features]
default = ["serde"]
impersonated-tx = []
serde = ["dep:serde"]
